<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/myMusicFragment">

    <fragment
        android:id="@+id/nowPlayingFragment"
        android:name="com.example.tabares_exercise_2.SongPlayerFragment"
        android:label="@string/now_playing" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.tabares_exercise_2.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/myMusicFragment"
        android:name="com.example.tabares_exercise_2.MyMusicFragment"
        android:label="@string/my_music" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.tabares_exercise_2.FavoritesFragment"
        android:label="@string/favorites" />

</navigation>
